--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel=stylesheet href="style.css">
     <script defer src="ip.js"></script>
     <title>Document</title>
 
 </head>
 <body>
-    <label>IP ADDRESS</label>
-    <input type = "text" id =ipaddress placeholder="My Public IP:" style="font-size: 3rem; height: 50px;">
+    <div class="main">
+        <input class="textbox" type = "text" id =ipaddress placeholder="My Public IP:">
+    </div>
+    
 </body>
 </html>
